--- a/source/_patterns/02-organisms/sections/slideout-panel.mustache
+++ b/source/_patterns/02-organisms/sections/slideout-panel.mustache
@@ -135,7 +135,7 @@
 					<div class="tiles">
 						<article class="style1 panelSOLAR-btn">
 							<span class="image">
-												<img src="http://placehold.it/100x50" alt="">
+												<img src="{{img.square.src}}" alt="">
 											</span>
 							<a href="#">
 								<h2>SOLAR</h2>
@@ -146,7 +146,7 @@
 						</article>
 						<article class="style1 panelNetID-btn">
 							<span class="image">
-												<img src="http://placehold.it/100x50" alt="">
+												<img src="{{img.square.src}}" alt="">
 											</span>
 							<a href="#">
 								<h2>NetID</h2>
@@ -157,7 +157,7 @@
 						</article>
 						<article class="style1 panelWiFi-btn">
 							<span class="image">
-												<img src="http://placehold.it/100x50" alt="">
+												<img src="{{img.square.src}}" alt="">
 											</span>
 							<a href="#">
 								<h2>WiFi</h2>
