--- a/source/src_scss/atoms/_base.scss
+++ b/source/src_scss/atoms/_base.scss
@@ -16,6 +16,7 @@
 @import "buttons/secondary-button";
 @import "buttons/hero-button";
 @import "buttons/icon-button";
+@import "buttons/tuxedo-button";
 @import "buttons/override-button";
 
 @import "images/images";
