--- a/source/src_scss/organisms/_organisms-base.scss
+++ b/source/src_scss/organisms/_organisms-base.scss
@@ -19,14 +19,14 @@
 
 @import "heros/hero-base.scss";
 @import "heros/hero-classic";
-@import "heros/hero-fiddy";
+@import "heros/hero-split";
 @import "heros/hero-bottom-fade";
 @import "heros/hero-contact-card";
 @import "heros/hero-event";
 @import "heros/hero-modern";
 @import "heros/seawolfStrip";
 @import "heros/video-hero";
-
+@import "heros/hero-beyond";
 
 
 @import "timelines/vertical-timeline";
