--- a/source/_patterns/00-atoms/00-meta/_00-head.mustache
+++ b/source/_patterns/00-atoms/00-meta/_00-head.mustache
@@ -9,8 +9,8 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+        <script src="/placeholders/js/jquery-1.9.1.js"></script>
+        <script src="/placeholders/js/jquery-ui.js"></script>
 
         <link rel="stylesheet" href="/css/style.css?{{ cacheBuster }}" media="all" />
         <link rel="stylesheet" href="/styleguide/css/styleguide-customizations.css?{{ cacheBuster }}" media="all" />
