--- a/source/_patterns/02-organisms/heros/_classic-hero.mustache
+++ b/source/_patterns/02-organisms/heros/_classic-hero.mustache
@@ -31,7 +31,7 @@
 
 				<div class="col-sm-9">
 
-					<h1>{{headline.short}}</h1>
+					<h1 class="hero-classic--heading">{{headline.short}}</h1>
 
 					<div class="hero-classic--text" class="introduction white">{{{paragraph.double}}}</div>
 
@@ -40,7 +40,7 @@
         {{^showimg}}
         <div class="col-sm-12">
 
-					<h1>{{headline.short}}</h1>
+					<h1 class="hero-classic--heading">{{headline.short}}</h1>
 
 					<div class="hero-classic--text" class="introduction white">{{{paragraph.double}}}</div>
 
