--- a/source/_patterns/02-organisms/heros/_split-hero.mustache
+++ b/source/_patterns/02-organisms/heros/_split-hero.mustache
@@ -1,6 +1,6 @@
-<section class="hero-fiddy cozy overlay-black bg-pattern-pentagon">
+<section class="hero-split cozy overlay-black bg-pattern-pentagon">
   {{# shownav }}
-    <div class="hero-fiddy--navigation">
+    <div class="hero-split--navigation">
           <div class="container">
               <div class="row">
 
@@ -18,13 +18,13 @@
   {{/ shownav }}
 
 
-  <div class="hero-fiddy--content">
+  <div class="hero-split--content">
   <div class="container">
   <div class="row">
   <div class="col-xs-12 col-md-6">
-      <h1>{{headline.short}}</h1>
+      <h1 class="hero-split--heading">{{headline.short}}</h1>
 
-      <div class="hero-fiddy--text">{{{paragraph.double}}}</div>
+      <div class="hero-split--text">{{{paragraph.double}}}</div>
 
       <div class="row">
         {{# listItems.two }}
@@ -39,12 +39,12 @@
   </div>
   <div class="col-md-6">
     {{#showvideo}}
-    <div class="video-wrapper">
+    <div class="hero-split--video video-wrapper">
         <iframe src="https://www.youtube.com/embed/DpWDOXN5DWU?rel=0" frameborder="0" allowfullscreen></iframe>
     </div>
     {{/showvideo}}
     {{^ showvideo }}
-    <div class="hero-fiddy--image">
+    <div class="hero-split--image">
       <img class="img-responsive fadeIn" src="{{img.square.src}}" alt="tech 2">
     </div>
     {{/ showvideo}}
