--- a/source/_patterns/03-templates/01-article.mustache
+++ b/source/_patterns/03-templates/01-article.mustache
@@ -8,7 +8,7 @@
 			{{> organisms-alert:emergency }}
 		{{/ emergency }}
 		{{# hero }}
-	       {{> organisms-hero-modern}}
+	       {{> organisms-modern-hero}}
 		{{/ hero}}
 
 		{{# notification }}
