--- a/source/src_scss/organisms/heros/_hero-modern.scss
+++ b/source/src_scss/organisms/heros/_hero-modern.scss
@@ -3,78 +3,29 @@ Hero
 ========================================================================== */
 
 .hero-modern {
-    font-weight: 400;
-    background-color: #000;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    box-sizing: border-box;
-    display: block;
-    font-size: 18px;
-    color: #fff;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    position: relative;
-    width: 100%;
-}
-
-.hero-modern h1 {
-    color: #fff;
-    margin-top: 0;
-}
-
-.hero-modern--navigation {
-  margin: 1em 0;
-}
-
-.hero-modern--buttons {
-  margin: 1em 0;
-}
-
-.hero-modern--navigation a{
-  margin: 0.5em 0;
+  @include hero();
 }
 
 .hero-modern--heading {
-    text-align: center;
-}
-.hero-modern--content {
-  margin: 1em 0;
+  @include hero--heading();
+
   text-align: center;
 }
 
-.hero-modern--text a {
-  color: $gray;
-  border-bottom: 1px $gray dashed;
+.hero-modern--navigation {
+  @include hero--navigation();
 }
 
-.hero-modern--text a:hover
-{
-  color: #fff;
-  border-bottom: 1px #fff solid;
-}
-
-/*
-.hero-modern {
-    position: relative;
-   // padding: 60px 0 60px 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    color: #fff;
-    width: 100%;
+.hero-modern--buttons {
+  @include hero--buttons();
 }
 
 .hero-modern--content {
+  @include hero--content();
 
-    padding: 2em 0;
-    p {
-        margin: 1em 0;
-    }
-    p a {
-        color: $red;
-        border-bottom: 1px #ccc dashed;
-    }
+  text-align: center;
 }
-*/
+
+.hero-modern--text {
+  @include hero--text();
+}
