Added stylings for a video hero section that will be responsive, and based on the size of the viewport the user will be served either the full video or a link to a youtube video. This is still a work in progress. // I have also added specific orientation stylings that are not yet used anywhere else in the unity project. I've added comments to them explaining their purposes in the hopes that we will be able to incorporate the stylings into the entire project. As of right now I am unsure of how to do this. // For the purpose of the orientation guide, I have added stylings for a fixed navigation bar. This fixed navigation bar can be used anywhere, but it was created with the intent for the Orientation guide, so it may need some refactoring in the future to meet unforseen needs. // I have added a new 'card' type called articles that feature a box like appearance, an image, a header/subheader and some content. When you hover/foucs over them, they appear to raise-up, indicating to the user that there is more content to be seen. // The article cards themselves are wrapped in an owl-carousel. Specific stylings have been added to the owl-carousel. I am unsure of how to ensure that this won't affect any other places that are utilizing the owl-carousel. // As for the form, it is still a work in progress.

--- a/source/_patterns/04-pages/Orientation-2016.mustache
+++ b/source/_patterns/04-pages/Orientation-2016.mustache
@@ -1,6 +1,23 @@
-<!-- This Acts As a Border  -->
+<style>
+
+@media(min-width:767px) {
+    .navbar {
+        padding: 0;
+        -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
+        transition: background .5s ease-in-out,padding .5s ease-in-out;
+    }
+
+    .top-nav-collapse {
+        padding: 0;
+    }
+}
+</style>
+
+
+<!-- This Acts As a Border
 <section class="snug" style="background-image: url('/images/backgrounds/images/redSwooshes.jpg'); background-size: cover;"></section>
-<!-- End Border  -->
+End Border  -->
 
 
 <section class="homepage-hero-module">
@@ -16,13 +33,44 @@
         </div>
     </div>
 </section>
-
+<!-- Begin Navbar -->
+<div id="nav">
+  <div class="navbar navbar-default navbar-static">
+    <div class="container">
+      <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
+      <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+        <span class="glyphicon glyphicon-bar"></span>
+        <span class="glyphicon glyphicon-bar"></span>
+        <span class="glyphicon glyphicon-bar"></span>
+      </a>
+      <div class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li class="divider"></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+        <ul class="nav pull-right navbar-nav">
+          <li>
+            <form class="navbar-form">
+          <input type="text" class="form-control" placeholder="Search">
+          <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+        </form>
+          </li>
+          <li>
+            <a href="#"><i class="glyphicon glyphicon-flag"></i> <span class="badge">2</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div><!-- /.navbar -->
+</div>
 <!-- This Acts As a Border  -->
 <section class="snug" style="background-image: url('/images/backgrounds/images/redSwooshes.jpg'); background-size: cover;"></section>
 <!-- End Border  -->
 
 
-<section class="getting-started-section" style="background-image: url(''); background-size: cover;">
+<section id="about" style="background-image: url(''); background-size: cover;">
     <!-- Wrapper -->
     <div class="container">
         <div class="cozy">
