--- a/source/src_scss/pages/_2016Orientation.scss
+++ b/source/src_scss/pages/_2016Orientation.scss
@@ -4,52 +4,65 @@ Video Header Stylings
 
 ============================================================================= */
 
-#fallback,#videohero {
-    display: none
+.header-video {
+  position: relative;
+  overflow: hidden;
 }
 
-@media (min-width: 1025px) {
-    #videohero {
-        display:block
-    }
+.header-video iframe,
+.header-video video {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
-@media (max-width: 1024px) {
-    #fallback {
-        display:block
-    }
+.header-video iframe {
+  height: 100%;
+  width: 100%;
 }
 
-#videohero .logo {
+.header-video video {
+  width: 100%;
+}
+
+.header-video__teaser-video {
+  width: 100%;
+  height: auto;
+}
+
+.header-video__media {
+  width: 100%;
+  height: auto;
+}
+.header-video__play-trigger {
+  position: absolute;
+  z-index: 5;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+.header-video__close-trigger {
+  display: block;
+  z-index: 99;
+  position: absolute;
+  right: 30px;
+  top: 30px;
+}
+.header-video__button {
     position: absolute;
     bottom: 50px;
     left: 40px;
-    z-index: 9;
+    z-index: 99;
 }
 
 @media (max-width: 768px) {
-    #videohero .logo {
+    .header-video__button {
         display:none
     }
-}
-.videoHero__button {
-font-size: 18px;
-font-weight: 700;
-visibility: visible;
-animation-delay: 0.2s;
-animation-name: fadeInUp;
-color: #ffffff;
-padding: 10px 25px;
-background-color: #990000;
-border-radius: 3px;
-border: 2px solid #990000;
-}
-.videoHero__button:hover,
-.videoHero__button:focus {
-color: #ffffff;
-background-color: transparent;
-border: 2px solid #ffffff;
-letter-spacing: 1px;
 }
 
 
@@ -69,20 +82,25 @@ into the project as a whole.
 
 // This class creates a section that takes up 100% width and height of the viewport
 
-.fullHeightSection {
+.full-height-section {
   height: 100vh;
-  padding-top: 100px;
-  padding-bottom: 100px;
   background-size: cover;
 }
 
-// On viewports smaller than 1025px, the effects of the .fullHeightSection will be nullified.
+.full-height-section--flex {
+  display: flex;
+  align-items: center;
+}
+// On viewports smaller than 1025px, the effects of the .fullHeightSection will be voided.
 
 @media (max-width: 1024px) {
-  .fullHeightSection {
+  .full-height-section {
     height: auto;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding: 20px 0px;
+
+  }
+  .full-height-section--flex {
+    display: block;
   }
 }
 
@@ -92,6 +110,12 @@ into the project as a whole.
   z-index: 99999;
   height: 25px;
   background-size: cover;
+}
+
+// .bg-farbeyondred sets the backgriund color to the new red backgroound color
+
+.bg-farbeyondred {
+  background-color: #D52027;
 }
 
 // Specific stylings for links in the 'fixed-nav'
@@ -104,10 +128,10 @@ into the project as a whole.
 
 // .gradientOverlayTopRight creates a gradient effect stemming from the top right of the section using the :before pseudo element.
 
-.gradientOverlayTopRight {
-position: relative;
+.gradient-overlay__TopRight {
+  position: relative;
 }
-.gradientOverlayTopRight:before {
+.gradient-overlay__TopRight:before {
   content: '';
 	position: absolute;
 	top: 0;
@@ -116,6 +140,10 @@ position: relative;
 	left: 0;
 	background-image: linear-gradient(to bottom left,#000000,transparent);
 	opacity: .6;
+}
+
+.continueArrow {
+  font-size: 3em;
 }
 
 // These classes are meant to override exisiting margin/padding on already defined elements
@@ -156,14 +184,6 @@ position: relative;
 	}
 }
 
-// .callToActionCard using this class as a quick fix to create a 'box' with the far beyond red rays as a background.
-
-.callToActionCard {
-  padding: 20px 30px;
-  background-color: #D52027;
-  height: auto;
-}
-
 // Special heading/subheading styles specific to the Orientation guide.
 
 .heading {
@@ -176,7 +196,7 @@ position: relative;
 .subheading {
 	color:#6a727b;
 	font-family:'Effra W01';
-	line-height: 1.3;
+	line-height: 1.5;
 	margin:30px 0;
 	margin-bottom:50px;
   font-weight: 400;
@@ -184,14 +204,28 @@ position: relative;
 
 /* Leaving this here to see if I can incorporate the stylings in a different way. */
 
-a.btn {
+/* a.btn {
 	transition: all 0.3s ease;
 	color:#999;
 	display: inline-block;
 	position: relative;
+} */
+
+
+
+.specialAction {
+  color: rgba(255,255,255,0.8);
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.specialAction:hover {
+  color: rgba(255,255,255,1);
+  letter-spacing: 1px;
+
 }
 
 /* =============================================================================
+
 
 ** Fixed Navbar Stylings **
 
@@ -200,14 +234,14 @@ a.btn {
 
 .navbar--fixed {
 	position: relative;
-	padding-top:50px;
+	padding-top: 50px;
 	transition: all 0.3s ease;
 	box-shadow:0 3px 5px rgba(0,0,0,.05);
 	padding:20px 0;
 }
 
 // Using these classes to give us the ability to separate the stylings of the fixed
-// navbar from the bootstrap default nav in the future. For now much of the defualt
+// navbar from the bootstrap default nav   in the future. For now much of the defualt
 // navbar stylings work for this case.
 // The @extend function allows us to keep the default stylings of the bootstrap classes
 // while also giving us the ability to modify them without changing the original
@@ -266,18 +300,19 @@ a.btn {
 	  		width:100%;
 	}
 }
-// Classes added via jQuery
+
+// Classes added via JavaScript
 
 .nav-fixed {
 	position: fixed;
 	top:0;
 	right:0;
 	left:0;
-	z-index:1030;
+	z-index: 9999;
 }
 .navbar-filler {
 	height: 0;
-	width:100%;
+	width: 100%;
 }
 
 /* =============================================================================
@@ -294,7 +329,7 @@ Slider Articles
 
 @media (max-width: 1024px){
   .articles {
-    padding: 20px 25px;
+    padding: 20px 0px;
   }
 }
 @media (max-width: 768px) {
@@ -335,7 +370,6 @@ Slider Articles
     font-weight: 400;
   }
 }
-
 .article img.article__image {
 	margin:0 auto;
 	width: 100%;
@@ -351,50 +385,7 @@ Slider Articles
 	margin-bottom:20px;
 }
 
-/* =============================================================================
 
-Orientation Buttons
-
-============================================================================= */
-
-.explore__button {
-	display:inline-block;
-	font-family:'Effra W01';
-  font-weight: 500;
-	font-size:18px;
-	padding:15px 30px;
-	margin:20px 10px;
-	border-radius:3px;
-	transition: all 0.3s ease;
-}
-.explore__button-red {
-	background: #990000;
-	border:3px solid #990000;
-	color:white;
-}
-.explore__button-red:hover {
-	background: #D52027;
-	border-color: #D52027;
-}
-.explore__button-white {
-	border:3px solid white;
-	background: transparent;
-	color:white;
-}
-.explore--button-white:hover {
-	background:white;
-	color:#D52027;
-}
-.specialAction {
-  color: rgba(255,255,255,0.8);
-  text-transform: uppercase;
-  font-weight: 700;
-}
-.specialAction:hover {
-  color: rgba(255,255,255,1);
-  letter-spacing: 1px;
-
-}
 
 /* =============================================================================
 
@@ -449,19 +440,14 @@ Owl Slider Stylings
 	right:-25px;
 }
 
-@media(max-width:768px) {
+@media(max-width: 990px) {
 	.owl-carousel .owl-controls {
-		position: absolute;
-		text-align: center;
-		top: -27px;
-    padding: 20px;
+		display: none;
 	}
 
 	.owl-carousel .owl-controls .owl-prev,
 	.owl-carousel .owl-controls .owl-next {
-		position: relative;
-		display: inline-block;
-		font-size:21px;
+	   display: none;
 	}
 }
 .owl-carousel .owl-wrapper:after {
@@ -472,7 +458,9 @@ Owl Slider Stylings
   line-height: 0;
   height: 0;
 }
+
 /* display none until init */
+
 .owl-carousel{
   display: none;
   position: relative;
@@ -529,11 +517,11 @@ Orientation Footer
 
 ============================================================================= */
 
-footer .social {
+footer .social-links {
 	padding:20px 0;
 }
 
-.social a {
+.social-links a {
 	margin:0 3px;
 	width:30px;
 	height: 30px;
@@ -545,7 +533,7 @@ footer .social {
 	color:#cccccc;
 	z-index:2;
 }
-.social a:before {
+.social-links a:before {
 	content:' ';
 	z-index:-1;
 	border-radius:50%;
@@ -556,31 +544,31 @@ footer .social {
 	left:50%;
 	background:black;
 }
-.social a:hover {
-	color:white;
+.social-links a:hover {
+	color: white;
 }
-.social a:hover:before {
+.social-links a:hover:before {
 	width:100%;
  	height:100%;
  	top:0; left:0;
 }
-.social a:active:before {
+.social-links a:active:before {
 	width:200%;
 	height: 200%;
 	opacity: 0;
 	top:-50%;
 	left:-50%;
 }
-.social a.facebook-circle:before {background:#3b5998;}
-.social a.twitter-circle:before {background:#55acee;}
-.social a.youtube-circle:before {background:#e62117;}
-.social a.flickr-circle:before {background:#ea4c89;}
+.social-links a.facebook-circle:before {background:#3b5998;}
+.social-links a.twitter-circle:before {background:#55acee;}
+.social-links a.youtube-circle:before {background:#e62117;}
+.social-links a.flickr-circle:before {background:#ea4c89;}
 
 
-.social a.facebook:active {color:#3b5998;}
-.social a.twitter:active {color:#55acee;}
-.social a.youtube-circle:active {color:#e62117;}
-.social a.flickr-circle:active {color:#ea4c89;}
+.social-links a.facebook:active {color:#3b5998;}
+.social-links a.twitter:active {color:#55acee;}
+.social-links a.youtube-circle:active {color:#e62117;}
+.social-links a.flickr-circle:active {color:#ea4c89;}
 
 
 
