--- a/source/src_scss/pages/_2016Orientation.scss
+++ b/source/src_scss/pages/_2016Orientation.scss
@@ -8,7 +8,6 @@ Video Header Stylings
   position: relative;
   overflow: hidden;
 }
-
 .header-video iframe,
 .header-video video {
   position: absolute;
@@ -17,21 +16,17 @@ Video Header Stylings
   left: 0;
   right: 0;
 }
-
 .header-video iframe {
   height: 100%;
   width: 100%;
 }
-
 .header-video video {
   width: 100%;
 }
-
 .header-video__teaser-video {
   width: 100%;
   height: auto;
 }
-
 .header-video__media {
   width: 100%;
   height: auto;
@@ -59,12 +54,17 @@ Video Header Stylings
     z-index: 99;
 }
 
+/* -----------------------------------------------------------------------------
+
+Video header media queries
+
+----------------------------------------------------------------------------- */
+
 @media (max-width: 768px) {
     .header-video__button {
         display:none
     }
 }
-
 
 /* =============================================================================
 
@@ -86,21 +86,12 @@ into the project as a whole.
   height: 100vh;
   background-size: cover;
 }
-
-.full-height-section--flex {
-  display: flex;
-  align-items: center;
-}
 // On viewports smaller than 1025px, the effects of the .fullHeightSection will be voided.
 
 @media (max-width: 1024px) {
   .full-height-section {
     height: auto;
     padding: 20px 0px;
-
-  }
-  .full-height-section--flex {
-    display: block;
   }
 }
 
@@ -173,6 +164,19 @@ into the project as a whole.
   }
 }
 
+// Display-flex, to be used when aligning items centered relative to each other
+// in bootstrap columns.
+
+.display--flex {
+  display: flex;
+  align-items: center;
+}
+@media (max-width: 1025px) {
+  .display--flex {
+    display: block;
+  }
+}
+
 // Changes text alignment based on viewport size
 
 @media(max-width:768px) {
@@ -187,42 +191,51 @@ into the project as a whole.
 // Special heading/subheading styles specific to the Orientation guide.
 
 .heading {
-	color:#484d53;
 	font-family:'Effra W01';
 	line-height: 1.3;
   font-weight: 700;
 }
-
 .subheading {
-	color:#6a727b;
 	font-family:'Effra W01';
 	line-height: 1.5;
-	margin:30px 0;
-	margin-bottom:50px;
   font-weight: 400;
 }
+.normal-text {
+  font-size: 1.5em;
+  line-height: 1.75;
+}
+.heading-small {
+  font-size: 2em;
+}
+.heading-medium {
+  font-size: 3em;
+}
+.heading-large {
+  font-size: 5em;
+}
+.heading-extra-large {
+  font-size: 8em;
+}
+.heading-super-large {
+  font-size: 10em;
+}
 
-/* Leaving this here to see if I can incorporate the stylings in a different way. */
-
-/* a.btn {
-	transition: all 0.3s ease;
-	color:#999;
-	display: inline-block;
-	position: relative;
-} */
-
-
-
-.specialAction {
-  color: rgba(255,255,255,0.8);
+.side-padding {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.uppercase {
   text-transform: uppercase;
-  font-weight: 700;
 }
-.specialAction:hover {
-  color: rgba(255,255,255,1);
-  letter-spacing: 1px;
 
+.text-blurb {
+  margin-bottom: 3em;
 }
+.text-blurb__border-red {
+  padding: 0px 20px;
+  border-left: 5px solid #D52027;
+}
+
 
 /* =============================================================================
 
@@ -260,13 +273,6 @@ into the project as a whole.
   @extend .navbar-collapse;
 
 }
-@media(max-width:768px) {
-
-	.navbar--fixed__default .navbar--fixed__links {
-		padding-top:30px;
-	}
-}
-
 .navbar--fixed__header, .navbar--fixed__collapse {
 	margin-top:10px;
 }
@@ -278,7 +284,6 @@ into the project as a whole.
 .navbar--fixed__default .navbar--fixed__links > li > a {
 	color:#bbb;
 }
-
 .navbar--fixed__default .navbar--fixed__links > li > a:after {
 	position: relative;
 	display: block;
@@ -292,6 +297,18 @@ into the project as a whole.
 }
 .navbar--fixed__default .navbar--fixed__links > li > a:hover, .navbar--fixed__default .navbar--fixed__links > li.active > a {
 	color: #484d53;
+}
+/* -----------------------------------------------------------------------------
+
+Navbar media queries
+
+----------------------------------------------------------------------------- */
+
+@media(max-width:768px) {
+
+	.navbar--fixed__default .navbar--fixed__links {
+		padding-top:30px;
+	}
 }
 @media(min-width:768px) {
 
@@ -321,25 +338,29 @@ Slider Articles
 
 ============================================================================= */
 
-// Articles Section Stylings - These styles pertain to a section that is for Individual Article cards
+// Article spacing fixes
 
 .articles {
-  padding: 0px 45px;
+  padding: 0;
 }
-
-@media (max-width: 1024px){
+@media (max-width: 1199px){
   .articles {
-    padding: 20px 0px;
+    padding: 0px 0px 30px 0px !important;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 990px){
   .articles {
-    padding: 20px 0px;
+    padding: 30px 0px !important;
+  }
+}
+@media (max-width: 767px) {
+  .articles {
+    padding: 0 !important;
   }
 }
 @media (max-width: 480px){
   .articles {
-    padding: 0;
+    padding: 0 !important;
   }
 }
 
@@ -351,7 +372,10 @@ Slider Articles
 	border-radius:2px;
   box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	margin: 0 0 30px 0;
+	margin: 0;
+  min-height: 400px;
+  vertical-align: bottom;
+
 }
 .article:hover {
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
@@ -360,9 +384,12 @@ Slider Articles
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 .article__content {
-  padding: 10px 25px;
+  position: relative;
   text-align: left;
   line-height: 1.3;
+  color: white;
+  padding-left: 30px;
+  padding-right: 30px;
 
   p {
     font-size: 1.3em;
@@ -375,14 +402,18 @@ Slider Articles
 	width: 100%;
 }
 
-.artcile .article__title {
+.article .article__title {
+  font-size: 3em;
 	margin-top:15px;
 	margin-bottom:0px;
+  font-weight: 700;
+  z-index: 99;
 }
 
 .article .article__subtitle {
 	margin:0;
 	margin-bottom:20px;
+  z-index: 99;
 }
 
 
@@ -405,27 +436,22 @@ Owl Slider Stylings
 
 .owl-carousel .owl-controls {
 	position: absolute;
-	width:100%;
-	top:calc(50% - 30px);
+	width: 100%;
+	top:calc(85% - 30px);
 }
 
 .owl-carousel .owl-controls .owl-prev,
 .owl-carousel .owl-controls .owl-next {
 	position: absolute;
-	font-size:21px;
-	color:#fff;
+	font-size: 3em;
+	color: rgba(255,255,255,.5);
 	transition: all 0.3s ease;
-  border-radius: 50%;
-  border: 2px solid #D52027;
-  background-color: #D52027;
   padding: 5px 8px;
 
 }
 .owl-carousel .owl-controls .owl-prev:hover,
 .owl-carousel .owl-controls .owl-next:hover {
-	color:#fff;
-  background-color: #D52027;
-  border: 2px solid #D52027;
+	color: rgba(255,255,255,1);
 }
 .owl-carousel .owl-controls .owl-prev:hover {
   transform: translateX(-5px);
@@ -434,13 +460,13 @@ Owl Slider Stylings
   transform: translateX(5px);
 }
 .owl-carousel .owl-controls .owl-prev {
-	left:-25px;
+	left: 30px;
 }
 .owl-carousel .owl-controls .owl-next {
-	right:-25px;
+	right: 30px;
 }
 
-@media(max-width: 990px) {
+/* @media(max-width: 990px) {
 	.owl-carousel .owl-controls {
 		display: none;
 	}
@@ -457,7 +483,7 @@ Owl Slider Stylings
   visibility: hidden;
   line-height: 0;
   height: 0;
-}
+} */
 
 /* display none until init */
 
