--- a/source/src_scss/libraries/bootstrap/bootstrap/_type.scss
+++ b/source/src_scss/libraries/bootstrap/bootstrap/_type.scss
@@ -149,6 +149,8 @@ mark,
 ul,
 ol {
   margin-top: 0;
+  margin-left: 1em;
+  padding: 0 !important;
   margin-bottom: ($line-height-computed / 2);
   ul,
   ol {
