--- a/source/src_scss/pages/_2016Orientation.scss
+++ b/source/src_scss/pages/_2016Orientation.scss
@@ -1,3 +1,4 @@
+
 /* =============================================================================
 
 Video Header Stylings
@@ -109,6 +110,10 @@ into the project as a whole.
   background-color: #D52027;
 }
 
+.bg-space-blue {
+  background-color: #1a2549;
+}
+
 // Specific stylings for links in the 'fixed-nav'
 
 .fixedNavLink {
@@ -133,8 +138,25 @@ into the project as a whole.
 	opacity: .6;
 }
 
-.continueArrow {
+.continue-arrow {
   font-size: 3em;
+  color: rgba(255, 255, 255, 0.5);
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border-radius: 50%;
+  border: 1px solid;
+  border-color: rgba(255, 255, 255, 0.5);
+  padding: 8px 0px 0 10px;
+
+  &:hover,
+  &:focus {
+    -webkit-transform: translateY(5px);
+    -ms-transform: translateY(5px);
+    transform: translateY(5px);
+    color: white;
+    border: 1px solid;
+    border-color: rgba(255, 255, 255, 1);
+  }
 }
 
 // These classes are meant to override exisiting margin/padding on already defined elements
@@ -231,8 +253,6 @@ into the project as a whole.
 .text-blurb {
   padding: 10px 0 10px 0;
 }
-
-
 
 /* =============================================================================
 
@@ -361,69 +381,11 @@ Slider Articles
   }
 }
 
-// Individual Article Card Stylings ============================================
-
-
-.article {
-	background: white;
-	border-radius:2px;
-  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	margin: 0;
-  min-height: 400px;
-  vertical-align: bottom;
-
-}
-.article:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-.article:focus {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
-}
-.article__content {
-  position: relative;
-  text-align: left;
-  line-height: 1.3;
-  color: white;
-  padding-left: 30px;
-  padding-right: 30px;
-
-  p {
-    font-size: 1.3em;
-    line-height: 1.3;
-    font-weight: 400;
-  }
-}
-.article img.article__image {
-	margin:0 auto;
-	width: 100%;
-}
-
-.article .article__title {
-  font-size: 3em;
-	margin-top:15px;
-	margin-bottom:0px;
-  font-weight: 700;
-  z-index: 99;
-}
-
-.article .article__subtitle {
-	margin:0;
-	margin-bottom:20px;
-  z-index: 99;
-}
-
-
-
 /* =============================================================================
 
 Owl Slider Stylings
 
 ============================================================================= */
-
-.owl-carousel .item {
-	padding:0 10px;
-}
 
 @media (max-width: 768px) {
   .owl-carousel .item {
@@ -434,7 +396,7 @@ Owl Slider Stylings
 .owl-carousel .owl-controls {
 	position: absolute;
 	width: 100%;
-	top:calc(85% - 30px);
+	top:calc(50% - 30px);
 }
 
 .owl-carousel .owl-controls .owl-prev,
@@ -443,7 +405,6 @@ Owl Slider Stylings
 	font-size: 3em;
 	color: rgba(255,255,255,.5);
 	transition: all 0.3s ease;
-  padding: 5px 8px;
 
 }
 .owl-carousel .owl-controls .owl-prev:hover,
@@ -457,32 +418,12 @@ Owl Slider Stylings
   transform: translateX(5px);
 }
 .owl-carousel .owl-controls .owl-prev {
-	left: 30px;
+	left: -10px;
 }
 .owl-carousel .owl-controls .owl-next {
-	right: 30px;
+	right: 0;
 }
 
-/* @media(max-width: 990px) {
-	.owl-carousel .owl-controls {
-		display: none;
-	}
-
-	.owl-carousel .owl-controls .owl-prev,
-	.owl-carousel .owl-controls .owl-next {
-	   display: none;
-	}
-}
-.owl-carousel .owl-wrapper:after {
-  content: ".";
-  display: block;
-  clear: both;
-  visibility: hidden;
-  line-height: 0;
-  height: 0;
-} */
-
-/* display none until init */
 
 .owl-carousel{
   display: none;
