Updates to Student Orientation Page

--- a/source/_patterns/04-pages/StudentOrientation2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientation2016.mustache
@@ -131,62 +131,64 @@ The settings for the "sliding" action are set in main.js
         <div class="full-height-section display--flex">
           <div class="container">
             <div class="col-md-12 col-sm-12 cozy">
-              <div class="cozy text-center">
-                  <h2 class="heading white">Getting Started</h2>
-                  <p class="normal-text white">Use the arrows to navigate and learn more about Wi-Fi, SOLAR, and NetID.</strong></p>
-              </div>
-              <hr class="white hidden-md hidden-lg">
-            </div>
-            <div id="articles" class="articles col-md-12 col-sm-12">
-              <div class="owl-carousel">
-                <div class="item panelWiFi-btn">
-                  <div class="col-md-5 hidden-sm hidden-xs hidden-md">
-                    <img src="../../placeholders/images/orientation/WiFi-final.png" alt="Person holding smartphone with WiFi symbol on screen">
-                  </div>
-                  <div class="col-md-7 col-sm-12">
-                    <div class="airy side-padding">
-                      <h2 class="heading white">WolfieNet (Wi-Fi)</h2>
-                      <h4 class="subheading white">WolfieNet is Stony Brook University's wireless network on West Campus, Southampton, Manhattan, and parts of East Campus. It is available to all faculty, students, staff, and guests.</h4>
-                      <br>
-                      <span href="panelWifi-btn" class="default-button default-button__white">Learn More About Wi-Fi &raquo;</span></p>
-                    </div>
-                  </div>
+                <div class="cozy text-center">
+                    <h2 class="heading white">Getting Started</h2>
+                    <p class="normal-text white">Use the arrows to navigate and learn more about Wi-Fi, SOLAR, and NetID.</strong>
+                    </p>
                 </div>
-                <div class="item panelSOLAR-btn">
-                  <div class="col-md-5 hidden-sm hidden-xs hidden-md">
+                <hr class="white hidden-md hidden-lg">
+            </div>
+          <div class="articles col-md-12 col-sm-12">
+            <div class="owl-carousel">
+              <div class="item panelWiFi-btn">
+                <div class="col-md-5 hidden-sm hidden-xs">
+                  <img src="../../placeholders/images/orientation/WiFi-final.png" alt="Person holding smartphone with WiFi symbol on screen">
+                </div>
+                <div class="col-md-7 col-sm-12">
+                  <div class="airy side-padding">
+                    <h2 class="heading white">WolfieNet (Wi-Fi)</h2>
+                    <h4 class="subheading white">WolfieNet is Stony Brook University's wireless network on West Campus, Southampton, Manhattan, and parts of East Campus. It is available to all faculty, students, staff, and guests.</h4>
+                    <br>
+                  <span href="panelWifi-btn" class="default-button default-button__white">Learn More About Wi-Fi &raquo;</span></p>
+                </div>
+              </div>
+            </div>
+              <div class="item panelSOLAR-btn">
+                <div class="col-md-5 hidden-sm hidden-xs">
                     <img src="../../placeholders/images/orientation/SOLAR-final.png" alt="Wolfie in a space suit floating in space">
-                  </div>
-                  <div class="col-md-7 col-sm-12">
-                    <div class="airy side-padding">
-                      <h2 class="heading white">SOLAR</h2>
-                      <h4 class="subheading white">SOLAR is Stony Brook University's enterprise-wide, self-service system which provides faculty, staff, and students with online access to manage personal information.</h4>
-                      <br>
-                      <span href="panelSOLAR-btn" class="default-button default-button__white">Learn More About SOLAR &raquo;</span></p>
-                    </div>
-                  </div>
                 </div>
-                <div class="item panelNetID-btn">
-                  <div class="col-md-5 hidden-sm hidden-xs hidden-md">
-                    <img src="../../placeholders/images/orientation/NetID-final.png" alt="Students and professor looking at tablet">
-                  </div>
-                  <div class="col-md-7 col-sm-12">
-                    <div class="airy side-padding">
-                      <h2 class="heading white">NetID</h2>
-                      <h4 class="subheading white">Every active employee, student, and faculty member is assigned a NetID which is used to access various computing resources.</h4>
-                      <br>
-                      <span href="panelNetID-btn" class="default-button default-button__white">Learn More About NetID &raquo;</span></p>
-                    </div>
+                <div class="col-md-7 col-sm-12">
+                  <div class="airy side-padding">
+                    <h2 class="heading white">SOLAR</h2>
+                    <h4 class="subheading white">SOLAR is Stony Brook University's enterprise-wide, self-service system which provides faculty, staff, and students with online access to manage personal information.</h4>
+                    <br>
+                    <span href="panelSOLAR-btn" class="default-button default-button__white">Learn More About SOLAR &raquo;</span></p>
                   </div>
                 </div>
               </div>
-              <hr class="white hidden-md hidden-lg">
+              <div class="item panelNetID-btn">
+                <div class="col-md-5 hidden-sm hidden-xs">
+                  <img src="../../placeholders/images/orientation/NetID-final.png" alt="Students and professor looking at tablet">
+                </div>
+                <div class="col-md-7 col-sm-12">
+                  <div class="airy side-padding">
+                    <h2 class="heading white">NetID</h2>
+                    <h4 class="subheading white">Every active employee, student, and faculty member is assigned a NetID which is used to access various computing resources.</h4>
+                    <br>
+                    <span href="panelNetID-btn" class="default-button default-button__white">Learn More About NetID &raquo;</span></p>
+                  </div>
+                </div>
+              </div>
             </div>
-            <div class="col-md-12 noPadding">
+            <hr class="white hidden-md hidden-lg">
+            </div>
+            <!-- <div class="col-md-12 noPadding">
               <div class="fluffy">
                 <div class="side-padding text-center">
-                  <p class="normal-text white">Continue to Learn More About Student Services Around Campus</p><br><a href="#aroundCampus" class="scrollto"><span class="continue-arrow sbuicon-arrow-down3" aria-hidden="true"></span><span class="sr-only">Go to Next Section Now</span></a>
+                  <p class="normal-text white">Continue to Learn More About Student Services Around Campus</p>
+                  <br><a href="#aroundCampus" class="scrollto"><span class="continue-arrow sbuicon-arrow-down3" aria-hidden="true"></span><span class="sr-only">Go to Next Section Now</span></a>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -205,7 +207,7 @@ The settings for the "sliding" action are set in main.js
               </div>
               <hr class="white hidden-md hidden-lg">
             </div>
-            <div id="articles" class="articles col-md-12 col-sm-12">
+            <div class="articles col-md-12 col-sm-12">
               <div class="owl-carousel">
                 <div class="item panelPrinting-btn">
                   <div class="col-md-5 hidden-sm hidden-xs hidden-md">
@@ -286,7 +288,7 @@ The settings for the "sliding" action are set in main.js
               </div>
               <hr class="white hidden-md hidden-lg">
             </div>
-            <div id="articles" class="articles col-md-12 col-sm-12">
+            <div class="articles col-md-12 col-sm-12">
               <div class="owl-carousel">
                 <div class="item panelGoogle-btn">
                   <div class="col-md-5 hidden-sm hidden-xs hidden-md">
