--- a/source/_patterns/04-pages/StudentOrientation2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientation2016.mustache
@@ -32,15 +32,16 @@ to the YouTube video.
 
 ============================================================================ -->
 
-<div class="header-video">
-    <img src="/placeholders/images/orientation/orientation-placeholder.jpg" alt="Students working at computers"
-         class="header-video__media"
+<div class="header-video gradient-overlay__TopRight">
+    <img src="/placeholders/images/orientation/orientation-hero.jpg" alt="Students working at computers"
+         class="header-video__media gradient"
          data-video-URL="https://www.youtube.com/embed/DJ8hg4m6Nbg?rel=0&hd=1&autohide=1&showinfo=0&autoplay=1&enablejsapi=1&origin=*"
-         data-teaser="/placeholders/video/orientation-teaser-video"
          data-video-width="560"
          data-video-height="315">
-    <div class="header-video__play-trigger">
-      <a href="https://www.youtube.com/embed/DJ8hg4m6Nbg?rel=0&hd=1&autohide=1&showinfo=0&autoplay=1&enablejsapi=1&origin=*"  target="_blank" class="default-button button-large" id="header-video__play-trigger">Watch the Welcome Video &raquo;</a>
+
+    <div class="header-video__play-trigger text-center">
+      <h2 class="heading white">Welcome to IT Student Orientation</h2>
+      <a href="https://www.youtube.com/embed/DJ8hg4m6Nbg?rel=0&hd=1&autohide=1&showinfo=0&autoplay=1&enablejsapi=1&origin=*"  class="default-button button-large" id="header-video__play-trigger">Watch the Welcome Video &raquo;</a>
       <a href="#explore" class="default-button button-large scrollto">Explore Student Technology &raquo;</a>
     </div>
     <button type="button" class="default-button button-large header-video__close-trigger" id="header-video__close-trigger">Close video</button>
@@ -182,13 +183,13 @@ The settings for the "sliding" action are set in main.js
             </div>
             <hr class="white hidden-md hidden-lg">
             </div>
-            <!-- <div class="col-md-12 noPadding">
+            <div class="col-md-12 noPadding">
               <div class="fluffy">
                 <div class="side-padding text-center">
                   <p class="normal-text white">Continue to Learn More About Student Services Around Campus</p>
                   <br><a href="#aroundCampus" class="scrollto"><span class="continue-arrow sbuicon-arrow-down3" aria-hidden="true"></span><span class="sr-only">Go to Next Section Now</span></a>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
         </div>
