--- a/source/src_scss/molecules/cards/_event-card.scss
+++ b/source/src_scss/molecules/cards/_event-card.scss
@@ -1,50 +1,46 @@
-.event-card {
-    margin: 20px 15px;
-    max-width: 500px;
-}
-
 .event-card--heading {
-    color: #fff;
-    font-size: 18px;
-    line-height: 24px;
-    padding: 15px;
-    margin: 0px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    a {
-        color: $white;
-    }
+    color: $dark-gray;
+    font-size: 1.5em;
+    line-height: 1.3;
+    font-weight: 700;
 }
+.event-card--heading-link {
+  color: $dark-gray;
 
-/*h3 {
-    font-size: 18px;
-    line-height: 36px;
-    margin: 0px;
-}*/
+  &:hover,
+  &:focus {
+    color: $red;
+    transition: .3s ease all;
+  }
+  &:visited {
+    color: $dark-gray;
+  }
+  &:visited:hover {
+    color: $red;
+  }
+}
 
 .event-card--content {
-    background: #fff;
-    padding: 15px;
-    border: 1px solid #ddd;
-    border-top: 0px;
-    //font-family: 'Trade Gothic Next W01', Arial, sans-serif;
-    font-size: 0.9em;
-    line-height: 20px;
-    color: #333;
+    padding: 1.2em 0px;
+    font-size: 1.2em;
+    line-height: 1.5;
     a {
         color: $red;
+
+      &:hover,
+      &:focus {
+        transition: .3s ease all;
+      }
     }
-    a:hover {
-        color: $red;
-        border-bottom: 1px $red dashed;
-    }
+
 }
 
-.event-card--date-time:before {
-    @extend .sbuicon;
+.event-card--date-time{
+    text-transform: uppercase;
+    /* @extend .sbuicon;
     color: $red;
     content: "\ea4d";
-    margin-right: 1em;
+    margin-right: 1em; */
 }
 
 .event-card--map:before {
@@ -62,25 +58,15 @@
 }
 
 .event-card--register {
-    background-color: #eee;
-    padding: 1em 0.5em;
-    color: #333;
-    border: 1px solid #ddd;
-    border-top: 0px;
-    text-align: center;
+
 }
 
 .event-card--button {
-    border-radius: 3px;
-    border: 1px solid #333;
-    padding: 5px 10px;
-    color: #6a6a6a;
-    margin-right: 5px;
+  @extend .default-button;
 }
 
 .event-card--button:hover {
-    background-color: #fff;
-    color: #6a6a6a;
+  @extend .default-button:hover;
 }
 
 .event-card--registration-button:before {
