Updates to orientation hero section.

--- a/source/_patterns/04-pages/StudentOrientation2016.mustache
+++ b/source/_patterns/04-pages/StudentOrientation2016.mustache
@@ -33,12 +33,7 @@ to the YouTube video.
 ============================================================================ -->
 
 <div class="header-video gradient-overlay__TopRight">
-    <img src="/placeholders/images/orientation/orientation-hero.jpg" alt="Students working at computers"
-         class="header-video__media gradient"
-         data-video-URL="https://www.youtube.com/embed/DJ8hg4m6Nbg?rel=0&hd=1&autohide=1&showinfo=0&autoplay=1&enablejsapi=1&origin=*"
-         data-video-width="560"
-         data-video-height="315">
-
+    <img src="/placeholders/images/orientation/orientation-hero.jpg" alt="Students working at computers" class="header-video__media">
     <div class="header-video__play-trigger text-center">
       <h2 class="heading white">Welcome to IT Student Orientation</h2>
       <a href="https://www.youtube.com/embed/DJ8hg4m6Nbg?rel=0&hd=1&autohide=1&showinfo=0&autoplay=1&enablejsapi=1&origin=*"  class="default-button button-large" id="header-video__play-trigger">Watch the Welcome Video &raquo;</a>
